--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -424,9 +424,9 @@
         // Load images from uploaded files
         async function loadImages() {
             const imageFiles = [
-                'image (6).jpg',  // Sala de espera 2
-                'image (7).jpg',  // Consulta médica
-                'image (8).jpg'   // Sala de espera 1
+                'image.jpg',      // Sala de espera 2
+                'image (1).jpg',  // Consulta médica
+                'image (2).jpg'   // Sala de espera 1
             ];
 
             const carousel = document.getElementById('carousel');
