--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -366,13 +366,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="carousel-slide active">
-                    <img src="https://drive.google.com/uc?export=view&id=1D0Vo1w3Jazsxxef_oa9Q1rjGuf1w0rNL" alt="Sala de espera - Instalaciones modernas y cómodas">
+                    <img src="Imagen de WhatsApp 2025-11-15 a las 13:53:32.jpeg" alt="Sala de espera - Instalaciones modernas y cómodas">
                 </div>
                 <div class="carousel-slide">
-                    <img src="https://drive.google.com/uc?export=view&id=1-wwq-nqocNHQ29SDFShngkrYOd52sJ-I" alt="Consulta médica equipada con camilla y mobiliario profesional">
+                    <img src="Imagen de WhatsApp 2025-11-15 a las 13:54:05.jpeg" alt="Consulta médica equipada con camilla y mobiliario profesional">
                 </div>
                 <div class="carousel-slide">
-                    <img src="https://drive.google.com/uc?export=view&id=1e4sP25mQ6j6qx0zu8CfSt2SpH_LrwoHf" alt="Sala de espera - Recepción con señalización clara">
+                    <img src="Imagen de WhatsApp 2025-11-15 a las 13:54:14.jpeg" alt="Sala de espera - Recepción con señalización clara">
                 </div>
             </div>
             <div class="carousel-controls" id="carouselControls">
