--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -366,13 +366,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="carousel-slide active">
-                    <img src="Imagen de WhatsApp 2025-11-15 a las 13:53:32.jpeg" alt="Sala de espera - Instalaciones modernas y cómodas">
+                    <img src="sala1.jpg" alt="Sala de espera - Instalaciones modernas y cómodas">
                 </div>
                 <div class="carousel-slide">
-                    <img src="Imagen de WhatsApp 2025-11-15 a las 13:54:05.jpeg" alt="Consulta médica equipada con camilla y mobiliario profesional">
+                    <img src="consulta1.jpg" alt="Consulta médica equipada con camilla y mobiliario profesional">
                 </div>
                 <div class="carousel-slide">
-                    <img src="Imagen de WhatsApp 2025-11-15 a las 13:54:14.jpeg" alt="Sala de espera - Recepción con señalización clara">
+                    <img src="sala2.jpg" alt="Sala de espera - Recepción con señalización clara">
                 </div>
             </div>
             <div class="carousel-controls" id="carouselControls">
