--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -366,13 +366,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="carousel-slide active">
-                    <img src="sala1.jpg" alt="Sala de espera - Instalaciones modernas y cómodas">
+                    <img src="https://centrosanitariolarrabide.github.io/alquilerconsultasanitaria/sala1.jpg" alt="Sala de espera - Instalaciones modernas y cómodas" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Sala+de+Espera+1';">
                 </div>
                 <div class="carousel-slide">
-                    <img src="consulta1.jpg" alt="Consulta médica equipada con camilla y mobiliario profesional">
+                    <img src="https://centrosanitariolarrabide.github.io/alquilerconsultasanitaria/consulta1.jpg" alt="Consulta médica equipada con camilla y mobiliario profesional" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Consulta+Medica';">
                 </div>
                 <div class="carousel-slide">
-                    <img src="sala2.jpg" alt="Sala de espera - Recepción con señalización clara">
+                    <img src="https://centrosanitariolarrabide.github.io/alquilerconsultasanitaria/sala2.jpg" alt="Sala de espera - Recepción con señalización clara" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Sala+de+Espera+2';">
                 </div>
             </div>
             <div class="carousel-controls" id="carouselControls">
