Update index.html with new content

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -92,13 +92,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="carousel-slide active">
-                    <img src="https://raw.githubusercontent.com/centrosanitariolarrabide/centrosanitariolarrabide.github.io/7103e029de604d332fb5e5b86be35d9dcfe60205/alquilerconsultasanitaria/sala1.jpeg" alt="Sala de espera - Instalaciones modernas y cómodas" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Sala+de+Espera+1';">
+                    <img src="./sala1.jpeg" alt="Sala de espera - Instalaciones modernas y cómodas" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Sala+de+Espera+1';">
                 </div>
                 <div class="carousel-slide">
-                    <img src="https://raw.githubusercontent.com/centrosanitariolarrabide/centrosanitariolarrabide.github.io/7103e029de604d332fb5e5b86be35d9dcfe60205/alquilerconsultasanitaria/consulta1.jpeg" alt="Consulta médica equipada con camilla y mobiliario profesional" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Consulta+Medica';">
+                    <img src="./consulta1.jpeg" alt="Consulta médica equipada con camilla y mobiliario profesional" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Consulta+Medica';">
                 </div>
                 <div class="carousel-slide">
-                    <img src="https://raw.githubusercontent.com/centrosanitariolarrabide/centrosanitariolarrabide.github.io/7103e029de604d332fb5e5b86be35d9dcfe60205/alquilerconsultasanitaria/sala2.jpeg" alt="Sala de espera - Recepción con señalización clara" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Sala+de+Espera+2';">
+                    <img src="./sala2.jpeg" alt="Sala de espera - Recepción con señalización clara" onerror="this.onerror=null; this.src='https://via.placeholder.com/1200x500/2563eb/ffffff?text=Sala+de+Espera+2';">
                 </div>
             </div>
             <div class="carousel-controls" id="carouselControls">
