Update header title in index.html

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <header>
-        <h1>Alquiler de Consulta Sanitaria</h1>
+        <h1>CENTRO SANITARIO LARRABIDE Alquiler de Consulta Sanitaria</h1>
         <p class="subtitle">Con Habilitación Sociosanitaria</p>
     </header>
 
